# fty-asset-rest

./: CMakeLists.txt  Jenkinsfile  README.md
asset/: CMakeLists.txt
asset/asset/: asset-cam.h  asset-db.h  asset-import.h  asset-manager.h  db.h  error.h
asset/src/: asset-cam.cpp  asset-configure-inform.cpp  asset-db.cpp  asset-helpers.cpp  asset-import.cpp  json.cpp
asset/src/manager/: create.cpp  delete.cpp  export.cpp  import.cpp  read.cpp
conf/: 43_assets.xml.in  53_assets.xml.in
packaging/debian/: control
src/: actions-get.cpp  actions-get.h  actions-post.cpp  actions-post.h  create.cpp  create.h  delete.cpp  delete.h  edit.cpp  edit.h  export.cpp  export.h  import.cpp  import.h  list.cpp  list.h  read.cpp  read.h
src/asset/: asset-computed.cpp  asset-configure-inform.cpp  asset-configure-inform.h  asset-db.cpp  asset-db.h  asset-helpers.cpp  asset-helpers.h  asset-import.cpp  asset-import.h  asset-licensing.cpp  asset-manager.cpp  asset-manager.h  csv.cpp  db.h  error.h  json.cpp  logger.h
test/: CMakeLists.txt  create.cpp  export.cpp  import.cpp  insert.cpp  main.cpp  names.cpp  read.cpp  select.cpp  test-utils.h
test/conf/: logger.conf
test/db/: insert.cpp  names.cpp  select.cpp
